Added GetMyArgumentsLength to FTL https://bugs.webkit.org/show_bug.cgi?id=128758

Patch by Matthew Mirman <mmirman@apple.com> on 2014-02-13
Reviewed by Filip Pizlo.

* ftl/FTLCapabilities.cpp:
(JSC::FTL::canCompile):
* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compileNode):
(JSC::FTL::LowerDFGToLLVM::compileGetMyArgumentsLength):
* tests/stress/ftl-getmyargumentslength.js: Added.
(foo):

Canonical link: https://commits.webkit.org/146810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164074 268f45cc-cd09-0410-ab3c-d52691b4dbfc